# moos-ivp-blueboat

./: CMakeLists.txt
assets/maps/: MIT_SP.info
missions/alpha_pavlab_asv/: meta_vehicle.bhv  meta_vehicle.moos  plug_pMarineViewer.moos
missions/alpha_pavlab_asv/plugs/blueboat/: plug_iBackSeatBroker.moos  plug_pBB_DGPS_EKF.moos  plug_pMarinePIDV22.moos  plug_pThrustMix.moos
missions/alpha_pavlab_asv/plugs/shared_all/: plug_origin_warp.moos
missions/alpha_pavlab_asv/plugs/shared_asv/: plug_pThrustMix.moos  plug_uSimMarineV22.moos
missions/blueboat_frontseat/: launch_vehicle.sh  meta_vehicle.moos
missions/blueboat_frontseat/plugs/blueboat_fs/: plug_iBBNavigatorInterface.moos  plug_iBBThrustCtrl.moos  plug_iFrontSeatBroker.moos  plug_iUnicoreGPS.moos  plug_origin_warp.moos  plug_pNavigator_AHRS.moos  plug_uRTCMBroker.moos
scripts/: bb_init.sh
src/: CMakeLists.txt
src/01_libraries/: CMakeLists.txt
src/01_libraries/lib_MadgwickAHRS/: CMakeLists.txt  MadgwickAHRS.cpp  MadgwickAHRS.h
src/01_libraries/lib_broker_v2/: BrokerV2Codec.hpp
src/01_libraries/lib_doodle_radio/: CMakeLists.txt  Doodle Labs API Reference.html  DoodleRadioDriver.cpp  DoodleRadioDriver.h  DoodleRadioDriver.hpp
src/01_libraries/lib_filters/: LPF.hpp
src/01_libraries/lib_nb_utils/: CMakeLists.txt  NetworkBrokerUtils.hpp  networkbroker.hpp  networkclient.hpp
src/01_libraries/lib_sbus/: CMakeLists.txt  sbus_handler.cpp  sbus_handler.h
src/01_libraries/lib_unicore/: CMakeLists.txt  UnicoreDataDTO.hpp  UnicoreParser.cpp  UnicoreParser.h
src/02_applets/: CMakeLists.txt
src/02_applets/bb_attitude/: CMakeLists.txt  main.cpp
src/02_applets/doodle_radio_utility/: CMakeLists.txt  main.cpp
src/02_applets/init_bb_pwm/: CMakeLists.txt  main.cpp
src/02_applets/test_gnss_heading/: CMakeLists.txt  main.cpp
src/iBBNavigatorInterface/: BBNavigatorInterface.cpp  BBNavigatorInterface.h  BBNavigatorInterface_Info.cpp  BBNavigatorInterface_Info.h  CMakeLists.txt  iBBNavigatorInterface.moos  main.cpp
src/iBBNavigatorInterface_v1/: BBNavigatorInterface_v1.cpp  BBNavigatorInterface_v1.h  BBNavigatorInterface_v1_Info.cpp  BBNavigatorInterface_v1_Info.h  CMakeLists.txt  main.cpp
src/iBBNavigatorInterface_v2/: BBNavigatorInterface_v2.cpp  BBNavigatorInterface_v2.h  BBNavigatorInterface_v2_Info.cpp  BBNavigatorInterface_v2_Info.h  CMakeLists.txt  main.cpp
src/iBackSeatBroker/: BackSeatBroker.cpp  BackSeatBroker.h  BackSeatBroker_Info.cpp  BackSeatBroker_Info.h  CMakeLists.txt  iBackSeatBroker.moos  main.cpp
src/iDoodleLabs/: CMakeLists.txt  DoodleLabs.cpp  DoodleLabs.h  DoodleLabs_Info.cpp  DoodleLabs_Info.h  iDoodleLabs.moos  mac_lookup_example.txt  main.cpp
src/iFrontSeatBroker/: CMakeLists.txt  FrontSeatBroker.cpp  FrontSeatBroker.h  FrontSeatBroker_Info.cpp  FrontSeatBroker_Info.h  iFrontSeatBroker.moos  main.cpp
src/iRCReader/: CMakeLists.txt  RCReader.cpp  RCReader.h  RCReader_Info.cpp  RCReader_Info.h  main.cpp
src/iUnicore/: CMakeLists.txt  Unicore.cpp  Unicore.h  Unicore_Info.cpp  Unicore_Info.h  main.cpp
src/iUnicoreGPS/: CMakeLists.txt  UnicoreGPS.cpp  UnicoreGPS.h  UnicoreGPS_Info.cpp  UnicoreGPS_Info.h  iUnicoreGPS.moos  main.cpp
src/pBB_DGPS_EKF/: BB_DGPS_EKF.cpp  BB_DGPS_EKF.h  BB_DGPS_EKF_Info.cpp  BB_DGPS_EKF_Info.h  BB_DGPS_EKF_Model.hpp  CMakeLists.txt  main.cpp  pBB_DGPS_EKF.moos
src/pBB_EKF/: BB_EKF.cpp  BB_EKF.h  BB_EKF_Info.cpp  BB_EKF_Info.h  CMakeLists.txt  NavEKF.hpp  main.cpp  pBB_EKF.moos
src/pBB_Health/: BB_Health.cpp  BB_Health.h  BB_Health_Info.cpp  BB_Health_Info.h  CMakeLists.txt  main.cpp  pBB_Health.moos
src/pThrustMix/: CMakeLists.txt  ThrustMix.cpp  ThrustMix.h  ThrustMix_Info.cpp  ThrustMix_Info.h  main.cpp
src/uBBBundler/: BBBundler.cpp  BBBundler.h  BBBundler_Info.cpp  BBBundler_Info.h  CMakeLists.txt  main.cpp  uBBBundler.moos
src/uRTCMBroker/: CMakeLists.txt  RTCMBroker.cpp  RTCMBroker.h  RTCMBroker_Info.cpp  RTCMBroker_Info.h  main.cpp  uRTCMBroker.moos
